--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,11 +5,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity"
     >
+    <data>
+    </data>
     <androidx.drawerlayout.widget.DrawerLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:openDrawer="start"
         android:fitsSystemWindows="true"
+        android:id="@+id/drawerLayout"
         >
         <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:layout_width="match_parent"
@@ -34,7 +37,14 @@
                 android:layout_height="wrap_content"
                 app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
                 >
-
+                <androidx.fragment.app.FragmentContainerView
+                    android:name="androidx.navigation.fragment.NavHostFragment"
+                    app:defaultNavHost="true"
+                    android:id="@+id/nav_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:navGraph="@navigation/main_navigation"
+                    />
             </androidx.core.widget.NestedScrollView>
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
         <com.google.android.material.navigation.NavigationView
