--- a/app/src/main/res/layout/fragment_bill.xml
+++ b/app/src/main/res/layout/fragment_bill.xml
@@ -7,4 +7,10 @@
     tools:context=".BillFragment"
     >
 
+    <mx.mcardenas.mediagua.GraphBars
+        style="@style/Widget.Theme.Mediagua.MyView"
+        android:layout_width="match_parent"
+        android:layout_height="380dp"
+
+        />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
