--- a/app/src/main/res/values/attrs_graph_bars.xml
+++ b/app/src/main/res/values/attrs_graph_bars.xml
@@ -1,6 +1,7 @@
 <resources>
     <declare-styleable name="GraphBars">
         <attr name="topValue" format="float" />
+        <attr name="barWidth" format="float" />
         <attr name="divisions" format="integer" />
     </declare-styleable>
 </resources>
