--- a/app/src/main/res/layout/fragment_bill.xml
+++ b/app/src/main/res/layout/fragment_bill.xml
@@ -3,6 +3,7 @@
     tools:ignore="HardcodedText"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     >
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
@@ -111,9 +112,10 @@
                         />
                 </RelativeLayout>
             </RelativeLayout>
-            <mx.mcardenas.mediagua.views.GraphBars
+            <mx.mcardenas.mediagua.views.graphs.Graph
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
+                app:barWidth="30"
                 />
             <LinearLayout
                 android:layout_width="match_parent"
