--- a/app/src/main/res/layout/fragment_consume.xml
+++ b/app/src/main/res/layout/fragment_consume.xml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     tools:context=".fragments.ConsumeFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <data />
+
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Veteaalverga" />
+        android:orientation="vertical"
+        android:foregroundGravity="center"
+        android:background="#ff0000">
 
-</FrameLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Hola" />
+
+    </FrameLayout>
+</layout>
