--- a/app/src/main/res/layout/fragment_consume.xml
+++ b/app/src/main/res/layout/fragment_consume.xml
@@ -1,21 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".fragments.ConsumeFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".fragments.ConsumeFragment"
+    tools:ignore="HardcodedText">
 
     <data />
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:foregroundGravity="center"
-        android:background="#ff0000">
-
+        >
+        <com.google.android.material.tabs.TabLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Diario"
+                />
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Mensual"
+                />
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Prediccion"
+                />
+        </com.google.android.material.tabs.TabLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="250dp" />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Hola" />
-
-    </FrameLayout>
+            android:padding="15dp"
+            android:text="Historial de cambios"
+            style="@style/TextAppearance.Material3.BodyLarge"
+            android:textAlignment="center"
+            />
+        <com.google.android.material.chip.ChipGroup
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:singleLine="true"
+            app:chipSpacingHorizontal="6dp"
+            android:layout_gravity="center"
+            >
+                <com.google.android.material.chip.Chip
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Hola"
+                    style="@style/Widget.Material3.Chip.Input.Icon"
+                    app:closeIcon="@drawable/baseline_arrow_drop_down_24"
+                    android:checkable="false"
+                    />
+                <com.google.android.material.chip.Chip
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Hola"
+                    style="@style/Widget.Material3.Chip.Input.Icon"
+                    app:closeIcon="@drawable/baseline_arrow_drop_down_24"
+                    android:checkable="false"
+                    />
+                <com.google.android.material.chip.Chip
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Hola"
+                    style="@style/Widget.Material3.Chip.Input.Icon"
+                    app:closeIcon="@drawable/baseline_arrow_drop_down_24"
+                    android:checkable="false"
+                    />
+        </com.google.android.material.chip.ChipGroup>
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            />
+    </LinearLayout>
 </layout>
